Closes Issue #24.  Aligns sidebar left if parent page has children.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -324,6 +324,20 @@ footer.entry-meta a {
 	margin: 0 0 1.5em;
 }
 
+/* =Layouts
+----------------------------------------------- */
+
+.layout-sidebar-left .site-main {
+	margin: 0 0 0 30%;
+}
+.layout-sidebar-left .site-content .widget-area {
+	float: left;
+}
+.layout-sidebar-left .content-area {
+	float: right;
+	margin: 0 0 0 -25%;
+}
+
 /* =Archives
 ----------------------------------------------- */
 
